[package]
name = "wasm-web-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "Response",
    "ResponseInit",
    "Window",
    "Url",
    "console",
    "CacheStorage",
    "Cache",
    "ServiceWorkerGlobalScope"
]}
